# Le-Compositeur

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  justfile  quotes.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-alpha.yml
assets/examples/: quotes.md
assets/quotes/local/: local-quotes.md
crates/wc-backend/: Cargo.toml
crates/wc-backend/src/: lib.rs
crates/wc-cli/: Cargo.toml
crates/wc-cli/src/: main.rs
crates/wc-core/: Cargo.toml
crates/wc-core/src/: lib.rs  news_catalog.rs  widget_registry.rs
crates/wc-gui/: Cargo.toml
crates/wc-gui/src/: main.rs
crates/wc-render/: Cargo.toml
crates/wc-render/src/: lib.rs
crates/wc-source/: Cargo.toml
crates/wc-source/src/: lib.rs
docs/: ARCHITECTURE.md  DECISIONS_2026-03-14.md  PACKAGING.md  PLUGIN_REGISTRY_DRAFT.md  PROJECT_PLAYBOOK.md  README_FULL.md  RELEASE.md  SESSION_PLAN.md  TEST_MATRIX.md  TODO.md  USER_CONTENT_FORMAT.md
packaging/deb/: control.template
packaging/linux/: autostart-cleanup.sh  le-compositeur-wrapper.sh  le-compositeur.desktop  le-compositeur.metainfo.xml  wallpaper-composer.desktop  wallpaper-composer.metainfo.xml  wc-gui-wrapper.sh
packaging/releases/0.9.0/: README.md
packaging/releases/1.20260306.1/: README.md
packaging/rpm/: le-compositeur.spec  wallpaper-composer.spec
prototype/: settings-prototype.html
scripts/: build-alpha-deb.sh  build-alpha-rpm.sh
