[package]
name = "wc-cli"
version = "1.20260306.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wc-core = { path = "../wc-core" }
wc-render = { path = "../wc-render" }
wc-backend = { path = "../wc-backend" }
wc-source = { path = "../wc-source" }
chrono = { version = "0.4", default-features = true, features = ["clock"] }
