[package]
name = "wc-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eframe = { package = "eframe", version = "0.31" }
egui = "0.31"
image = "0.25"
wc-core = { path = "../wc-core" }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.15"
